# dine

./: .gitignore  DATASET_README.md  Makefile  README.md  dine.py  ine.ipynb  pyproject.toml
.cursor/rules/: guidelines.mdc
.github/workflows/: update-docs.yml
docs/: API JSON.md  Base de datos Tempus3.md  Códigos identificadores de tablas y series.md  Definición de URLs.md  Glosario Tempus3.md  Obtener datos de una tabla.md  Obtener identificadores.md  Otros casos de uso.md  Petición de datos.md  Petición de metadatos.md  Referencia de la API.md
scripts/: dine.py  ine.ipynb  scrape-ine-docs.sh
src/dine/: __init__.py  api.py  cli.py
